[package]
name = "ai-chat-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ベースとなる共通依存関係。Wasmビルドを邪魔しないよう default-features は false に。
# Leptos v0.8 では、nightly ではなく新設された "nightly-reactive" フラグなどを使うか、
# 特に追加フラグなしのプレーンな状態をベースにします。
leptos = { version = "0.8.20", default-features = false }
leptos_router = { version = "0.8.14", default-features = false }
leptos_meta = { version = "0.8.6", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.106"

# 必要に応じて hydration 時のみ有効化される optional 依存
console_error_panic_hook = { version = "0.1.7", optional = true }

# Cloudflare Workers用の Axum 統合
worker = { version = "0.8.3", features = ["axum"] }
tower-service = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4.76"
# --- 👇 Wasm以外のターゲット（ローカル開発・ネイティブ環境）でのみ有効化する設定 ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# ネイティブ環境では、それぞれのクレートが持つ本来のデフォルト機能（サーバーサイド向け機能）を戻します
leptos = { version = "0.8.20" }
leptos_router = { version = "0.8.14" }
leptos_meta = { version = "0.8.6" }
axum = { version = "0.8.0" }
leptos_axum = { version = "0.8.0" }
tokio = { version = "1.43", features = ["full"] }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "ai-chat-wasm"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"

bin-features = []
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
